[package]
name = "staking_program"
version = "0.1.0"
description = "SVM staking program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
